--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <div id="calculator-panel">
 
     <div class="directions">
-      <h1>10% Recurring Calculator</h1>
+      <h1><span class="multiplier-as-percentage"></span>% Recurring Calculator</h1>
       <p>
-        takes ten percent from the START VALUE, and adds that ten percent to the start value.<br /><br />
+        takes <span class="multiplier-as-percentage"></span> percent from the START VALUE, and adds that <span class="multiplier-as-percentage"></span> percent to the start value.<br /><br />
         Adjusting the REPEAT AMOUNT will run the calculation again (x amount of times) with the previous answer being
         the new starting value each time.
       </p>
@@ -25,7 +25,7 @@
       <table width="350px" border="1px">
 
         <tr>
-          <th colspan="2">~ Add 10% Calculator ~</th>
+          <th colspan="2">~ Add <span class="multiplier-as-percentage"></span>% Calculator ~</th>
         </tr>
 
         <tr>
@@ -63,7 +63,14 @@
 
   </div>
 
-  <input type=checkbox id="test-checkbox" onclick= "themeChanger()" > Test Theme
+  <input type="radio" id="ten-theme-radio" onclick= "themeChanger()" name="themes" checked> 
+  <label for="ten-theme">10% Theme</label><br>
+  
+  <input type="radio" id="twenty-theme-radio" onclick= "themeChanger()" name="themes"> 
+  <label for="twenty-theme">20% Theme</label><br>
+  
+  <input type="radio" id="fifty-theme-radio" onclick= "themeChanger()" name="themes"> 
+  <label for="fifty-theme">50% Theme</label><br>
 
   <script src="./tenPercentRecurring.js"></script>
 
