change theme input to row

--- a/index.html
+++ b/index.html
@@ -63,14 +63,20 @@
 
   </div>
 
-  <input type="radio" id="ten-theme-radio" onclick= "themeChanger()" name="themes" checked> 
-  <label for="ten-theme">10% Theme</label><br>
+  <div class="dir-row">
+    <input type="radio" id="ten-theme-radio" onclick= "themeChanger()" name="themes" checked> 
+    <label for="ten-theme">10% Theme</label><br>
+  </div> 
   
-  <input type="radio" id="twenty-theme-radio" onclick= "themeChanger()" name="themes"> 
-  <label for="twenty-theme">20% Theme</label><br>
+  <div class="dir-row">
+    <input type="radio" id="twenty-theme-radio" onclick= "themeChanger()" name="themes"> 
+    <label for="twenty-theme">20% Theme</label><br>
+  </div>
   
-  <input type="radio" id="fifty-theme-radio" onclick= "themeChanger()" name="themes"> 
-  <label for="fifty-theme">50% Theme</label><br>
+  <div class="dir-row">
+    <input type="radio" id="fifty-theme-radio" onclick= "themeChanger()" name="themes"> 
+    <label for="fifty-theme">50% Theme</label><br>
+  </div>
 
   <script src="./tenPercentRecurring.js"></script>
 
